6912018: CMS: guarantee(head() != 0,"The head of the list cannot be NULL")

Block too small to split was not correctly putback to free lists.

Reviewed-by: ysr